# mizuchi-uploadr

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TASKS.md  TRACING_PLAN.md  claude.md  config.docker.yaml  config.example.yaml  docker-compose.e2e.yml  docker-compose.yml  plan.md  prometheus.e2e.yml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
benches/: tracing_benchmark.rs  upload_benchmark.rs  zero_copy_benchmark.rs
deploy/: README.md
deploy/helm/mizuchi-uploadr/: Chart.yaml  values.yaml
deploy/helm/mizuchi-uploadr/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/kustomize/base/: config.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
deploy/kustomize/overlays/dev/: config.yaml  deployment-patch.yaml  kustomization.yaml  secret.yaml
deploy/kustomize/overlays/production/: config.yaml  deployment-patch.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  pdb.yaml
docs/: API.md  CONFIG.md  DEPLOYMENT.md  TRACING.md  TRACING_QUICKSTART.md
examples/: README.md  config.yaml  docker-compose.yml  generate-jwt.sh  prometheus.yml  tracing_jaeger.rs  tracing_tempo.rs  uploader.py
src/: lib.rs  main.rs
src/auth/: jwks.rs  jwt.rs  jwt_tracing.rs  mod.rs  sigv4.rs  sigv4_tracing.rs
src/authz/: mod.rs  opa_tracing.rs
src/authz/opa/: mod.rs
src/authz/openfga/: mod.rs
src/config/: loader.rs  mod.rs
src/metrics/: mod.rs  server.rs
src/router/: mod.rs
src/s3/: credentials.rs  mod.rs  pool.rs
src/server/: http_tracing.rs  mod.rs  pingora.rs
src/tracing/: init.rs  instrumentation.rs  mod.rs  propagation.rs  sampling.rs  subscriber.rs
src/upload/: mod.rs  multipart.rs  put_object.rs  temp_file.rs  zero_copy.rs
tests/: advanced_sampling_test.rs  auth_tracing_test.rs  config_tracing_test.rs  context_propagation_test.rs  e2e_test.rs  http_span_instrumentation_test.rs  http_tracing_test.rs  integration_test.rs  jwt_auth_test.rs  metrics_server_test.rs  multipart_handler_test.rs  opa_auth_test.rs  openfga_auth_test.rs  pingora_server_test.rs  put_object_handler_test.rs  router_test.rs  s3_client_pool_test.rs  s3_client_tracing_test.rs  s3_http_api_test.rs  s3_trace_context_test.rs  sigv4_auth_test.rs  tracing_init_test.rs  tracing_instrumentation_test.rs  tracing_performance_test.rs  tracing_resilience_test.rs  tracing_subscriber_test.rs  zero_copy_handler_test.rs  zero_copy_integration_test.rs
tests/e2e/: auth_flow.rs  common.rs  error_scenarios.rs  load_test.rs  mod.rs  upload_flow.rs
